--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HM TREASURIES</title>
+    <title>HM Treasuries Investment UK</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="about.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -30,9 +30,7 @@
                     <a href="about.html">About Us</a>
                     <a href="contact.html">Contacts</a>
                     <a href="investment.html">Investment</a>
-                    <a href="buy.htaaml">Buy A car</a>
-                    <a href="appeal.html" class="trade-link">Appeal</a>
-                </div>    
+                </div>
                  
                 <div class="nav-right-buttons auth-buttons">
                     <a href="#" class="login-btn">Login</a>
@@ -88,11 +86,11 @@
         <main>
             <section class="about-us">
                 <div class="about-content">
-                    <h1>About HM TREASURIES</h1>
-                    <p>At HM TREASURIES, we are dedicated to providing a secure and user-friendly platform for all your investment needs. Our mission is to empower individuals to take control of their financial future through smart investment strategies and cutting-edge technology.</p>
-                    <p>Founded in 2020, HM TREASURIES has quickly grown to become a trusted name in the investment community. We offer a wide range of investment options, including stocks, bonds, mutual funds, and ETFs, all designed to help you achieve your financial goals.</p>
+                    <h1>About HM Treasuries Investment UK</h1>
+                    <p>At HM Treasuries Investment UK, we are dedicated to providing a secure and user-friendly platform for all your investment needs. Our mission is to empower individuals to take control of their financial future through smart investment strategies and cutting-edge technology.</p>
+                    <p>Founded in 2020, HM Treasuries Investment UK has quickly grown to become a trusted name in the investment community. We offer a wide range of investment options, including stocks, bonds, mutual funds, and ETFs, all designed to help you achieve your financial goals.</p>
                     <p>Our team of experienced professionals is committed to delivering exceptional service and support to our clients. We believe in transparency, integrity, and putting our clients' interests first.</p>
-                    <p>Whether you're a seasoned investor or just starting out, HM TREASURIES provides the tools and resources you need to succeed in today's dynamic market. Join us today and take the first step towards a brighter financial future.</p>
+                    <p>Whether you're a seasoned investor or just starting out, HM Treasuries Investment UK provides the tools and resources you need to succeed in today's dynamic market. Join us today and take the first step towards a brighter financial future.</p>
                 </div>
                 <div class="about-image">
                     <img src="https://images.unsplash.com/photo-1556740749-887f6717d7e4?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" alt="About Us Image">
@@ -106,7 +104,7 @@
                 <div class="testimonials-wrapper" id="testimonials-wrapper">
                     <div class="testimonial-slide">
                         <div class="quote-icon">❝</div>
-                        <p class="quote-text">"I've tried several trading platforms, but HM TREASURIES's execution speed is unmatched. The withdrawal process is incredibly fast, which gives me great peace of mind. Highly recommend for serious traders."</p>
+                        <p class="quote-text">"I've tried several trading platforms, but Equity Hub's execution speed is unmatched. The withdrawal process is incredibly fast, which gives me great peace of mind. Highly recommend for serious traders."</p>
                         <div class="client-info">
                             <span class="client-name">Alex M.</span>
                             <span class="client-location">London, UK</span>
@@ -149,9 +147,9 @@
         <footer>
             <div class="footer-content">
                 <div class="footer-col disclaimer-col">
-                    <div class="footer-logo">HM TREASURIES</div>
+                    <div class="footer-logo">HM Treasuries Investment UK</div>
                     <p class="disclaimer-text">
-                        The Company does not provide services to citizens and/or residents of Australia, Austria, Belarus, Belgium, Bulgaria, Canada, Croatia, Republic of Cyprus, Czech Republic, Denmark, Estonia, Finland, France, Germany, Greece, Hungary, Iceland, Iran, Ireland, Israel, Italy, Latvia, Liechtenstein, Lithuania, Luxembourg, Malta, Myanmar, Netherlands, New Zealand, North Korea, Norway, Poland, Portugal, Puerto Rico, Romania, Russia, Singapore, Slovakia, Slovenia, South Sudan, Spain, Sudan, Sweden, Switzerland, UK, Ukraine, the USA, Yemen.
+                        The   Company that provide services to citizens and/or residents of Australia, Austria, Belarus, Belgium, Bulgaria, Canada, Croatia, Republic of Cyprus, Czech Republic, Denmark, Estonia, Finland, France, Germany, Greece, Hungary, Iceland, Iran, Ireland, Israel, Italy, Latvia, Liechtenstein, Lithuania, Luxembourg, Malta, Myanmar, Netherlands, New Zealand, North Korea, Norway, Poland, Portugal, Puerto Rico, Romania, Russia, Singapore, Slovakia, Slovenia, South Sudan, Spain, Sudan, Sweden, Switzerland, UK, Ukraine, the USA, Yemen.
                     </p>
                 </div>
                 <div class="footer-col link-group">
@@ -161,7 +159,7 @@
                         <li><a href="about.html">About Us</a></li>
                         <li><a href="contact.html">Contacts</a></li>
                         <li><a href="investment.html">Investment</a></li>
-                        <li><a href="buy.html">Buy A car</a></li>
+                        <li><a href="buy.html">Buy a Car</a></li>
                         <li><a href="appeal.html">Appeal</a></li>
                     </ul>
                 </div>
@@ -179,7 +177,7 @@
                     <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
                     <a href="#"><i class="fa-brands fa-instagram"></i></a>
                 </div>
-                <p>&copy; 2010 HM TREASURIES. All rights reserved.</p>
+                <p>&copy; 2010 HM Treasuries Investment UK. All rights reserved.</p>
             </div>
         </footer>
     </div>
@@ -190,14 +188,15 @@
         import { getAuth, signInWithEmailAndPassword, createUserWithEmailAndPassword, sendPasswordResetEmail, onAuthStateChanged, updateProfile } from 'https://www.gstatic.com/firebasejs/10.14.1/firebase-auth.js';
 
         const firebaseConfig = {
-      apiKey: "AIzaSyCDfyVAhNfuXYyzeetQ1_wlFhz7-wXWHDk",
-      authDomain: "treasure-f5cc7.firebaseapp.com",
-      projectId: "treasure-f5cc7",
-      storageBucket: "treasure-f5cc7.firebasestorage.app",
-      messagingSenderId: "726318121382",
-      appId: "1:726318121382:web:3cf5c5c7e628c9e313cf67",
-      measurementId: "G-E3MBP4PH90"
-    };
+            apiKey: "AIzaSyCDfyVAhNfuXYyzeetQ1_wlFhz7-wXWHDk",
+            authDomain: "treasure-f5cc7.firebaseapp.com",
+            projectId: "treasure-f5cc7",
+            storageBucket: "treasure-f5cc7.firebasestorage.app",
+            messagingSenderId: "726318121382",
+            appId: "1:726318121382:web:3cf5c5c7e628c9e313cf67",
+            measurementId: "G-E3MBP4PH90"
+                };
+
 
         const app = initializeApp(firebaseConfig);
         const auth = getAuth(app);
@@ -330,7 +329,7 @@
     <!-- Smartsupp Live Chat script -->
 <script type="text/javascript">
 var _smartsupp = _smartsupp || {};
-_smartsupp.key = '7f2bba33007b0ceba9ef214c29b3c6dcb2c1112d';
+_smartsupp.key = '3b7fcbb9b10ae9e82da06340230122bc80fdfb11';
 window.smartsupp||(function(d) {
   var s,c,o=smartsupp=function(){ o._.push(arguments)};o._=[];
   s=d.getElementsByTagName('script')[0];c=d.createElement('script');
@@ -338,7 +337,7 @@ window.smartsupp||(function(d) {
   c.src='https://www.smartsuppchat.com/loader.js?';s.parentNode.insertBefore(c,s);
 })(document);
 </script>
-<noscript> Powered by <a href="https://www.smartsupp.com" target="_blank">HM TREASURIESz</a></noscript>
+<noscript> Powered by <a href=“https://www.smartsupp.com” target=“_blank”>Smartsupp</a></noscript>
 
 </body>
 </html>
