--- a/admin_signup.html
+++ b/admin_signup.html
@@ -6,7 +6,14 @@
     <title data-i18n="signup">Create Admin Account</title>
     <link rel="icon" href="logo.jpg" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"/>
-    <style>/* same as login, just change h2 */</style>
+    <style>
+        body { background:#0c1018; color:#fff; display:flex; justify-content:center; align-items:center; height:100vh; font-family:sans-serif; }
+        .box { background:#111827; padding:40px; border-radius:12px; width:380px; border:1px solid #00ffff; }
+        input, button { width:100%; padding:12px; margin:8px 0; border-radius:8px; }
+        input { background:#1e293b; border:1px solid #2d3748; color:#fff; }
+        button { background:#00ffff; color:#000; border:none; font-weight:bold; cursor:pointer; }
+        .error { color:#ff4444; text-align:center; margin-top:10px; }
+    </style>
 </head>
 <body>
 <div class="box">
@@ -24,15 +31,15 @@
     import { getAuth, createUserWithEmailAndPassword, updateProfile } from 'https://www.gstatic.com/firebasejs/10.14.1/firebase-auth.js';
     import { getFirestore, doc, setDoc } from 'https://www.gstatic.com/firebasejs/10.14.1/firebase-firestore.js';
 
-      const firebaseConfig = {
-      apiKey: "AIzaSyCDfyVAhNfuXYyzeetQ1_wlFhz7-wXWHDk",
-      authDomain: "treasure-f5cc7.firebaseapp.com",
-      projectId: "treasure-f5cc7",
-      storageBucket: "treasure-f5cc7.firebasestorage.app",
-      messagingSenderId: "726318121382",
-      appId: "1:726318121382:web:3cf5c5c7e628c9e313cf67",
-      measurementId: "G-E3MBP4PH90"
-    };
+    const app = initializeApp({
+        apiKey: "AIzaSyCDfyVAhNfuXYyzeetQ1_wlFhz7-wXWHDk",
+            authDomain: "treasure-f5cc7.firebaseapp.com",
+            projectId: "treasure-f5cc7",
+            storageBucket: "treasure-f5cc7.firebasestorage.app",
+            messagingSenderId: "726318121382",
+            appId: "1:726318121382:web:3cf5c5c7e628c9e313cf67",
+            measurementId: "G-E3MBP4PH90"
+            });
     const auth = getAuth(app);
     const db = getFirestore(app);
 
