--- a/contact(es).html
+++ b/contact(es).html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HM TREASURIES</title>
+    <title> Hm Treasuries - Contactos</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="contact.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -13,7 +13,7 @@
     <div class="container">
         <header>
             <div class="alert-ticker-container">
-                <p class="ticker-content"> ⚠️ TENGA EN CUENTA EL FRAUDE: Equityhubs **NUNCA** le pedir&#225; que env&#237;e dinero a una cuenta personal. Deposite siempre fondos a trav&#233;s de los canales seguros y verificados de la plataforma. Proteja su inversi&#243;n. </p>
+                <p class="ticker-content"> ⚠️ TENGA EN CUENTA EL FRAUDE: Hm Treasuries **NUNCA** le pedir&#225; que env&#237;e dinero a una cuenta personal. Deposite siempre fondos a trav&#233;s de los canales seguros y verificados de la plataforma. Proteja su inversi&#243;n. </p>
             </div>
             <nav>
                 <div class="nav-left-mobile">
@@ -28,6 +28,8 @@
                      <a href="about(es).html">Qui&#233;nes somos</a> 
                      <a href="contact(es).html">Contactos</a> 
                     <a href="investment(es).html">Inversi&#243;n</a> 
+                    <a href="buy(es).html">Comprar un coche</a>
+                    <a href="appeal(es).html" class="trade-link">Recurso</a>
                 </div>    
                <div class="language">
                     <select id="language-select">
@@ -93,8 +95,8 @@
         <footer>
             <div class="footer-content">
                 <div class="footer-col disclaimer-col">
-                    <div class="footer-logo">HM TREASURIES</div>
-                    <p class="disclaimer-text"> La empresa no presta servicios a ciudadanos y/o residentes de determinados pa&#237;ses. </p>
+                    <div class="footer-logo">HM Treasuries Investment UK</div>
+                    <p class="disclaimer-text">   La Empresa  servicios a ciudadanos y/o residentes de determinados pa&#237;ses. </p>
                 </div>
                 <div class="footer-col link-group">
                     <h4>Inicio</h4>
@@ -103,6 +105,8 @@
                         <li><a href="about(es).html">La Empresa</a></li>
                         <li><a href="contact(es).html">Contactos</a></li>
                         <li><a href="investment(es).html">Inversi&#243;n</a></li>
+                        <li><a href="buy(es).html">Comprar un coche</a></li>
+                        <li><a href="appeal(es).html">Recurso</a></li>
                     </ul>
                 </div>
                 <div class="footer-col link-group">
@@ -119,7 +123,7 @@
                     <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
                     <a href="#"><i class="fa-brands fa-instagram"></i></a>
                 </div>
-                <p>2010 HM TREASURIES. Todos los derechos reservados.</p>
+                <p>2010 HM Treasuries Investment UK. Todos los derechos reservados.</p>
             </div>
         </footer>
     </div>
@@ -130,25 +134,33 @@
         import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.14.1/firebase-app.js';
         import { getAuth, signInWithEmailAndPassword, createUserWithEmailAndPassword, sendPasswordResetEmail, onAuthStateChanged, updateProfile } from 'https://www.gstatic.com/firebasejs/10.14.1/firebase-auth.js';
 
-        const firebaseConfig = { /* ...config... */ };
-        const app = initializeApp(firebaseConfig);
+        const firebaseConfig = {
+            apiKey: "AIzaSyCDfyVAhNfuXYyzeetQ1_wlFhz7-wXWHDk",
+            authDomain: "treasure-f5cc7.firebaseapp.com",
+            projectId: "treasure-f5cc7",
+            storageBucket: "treasure-f5cc7.firebasestorage.app",
+            messagingSenderId: "726318121382",
+            appId: "1:726318121382:web:3cf5c5c7e628c9e313cf67",
+            measurementId: "G-E3MBP4PH90"
+                };        const app = initializeApp(firebaseConfig);
         const auth = getAuth(app);
 
         // All popup, auth, and menu JS remains as-is, without i18next translation
     </script>
 
     <!-- Fouita and Smartsupp scripts -->
-    <script type="text/javascript">
-        var _smartsupp = _smartsupp || {};
-        _smartsupp.key = '7f2bba33007b0ceba9ef214c29b3c6dcb2c1112d';
-        window.smartsupp||(function(d) {
-          var s,c,o=smartsupp=function(){ o._.push(arguments)};o._=[];
-          s=d.getElementsByTagName('script')[0];c=d.createElement('script');
-          c.type='text/javascript';c.charset='utf-8';c.async=true;
-          c.src='https://www.smartsuppchat.com/loader.js?';s.parentNode.insertBefore(c,s);
-        })(document);
-    </script>
-    
+   <script type="text/javascript">
+var _smartsupp = _smartsupp || {};
+_smartsupp.key = '3b7fcbb9b10ae9e82da06340230122bc80fdfb11';
+window.smartsupp||(function(d) {
+  var s,c,o=smartsupp=function(){ o._.push(arguments)};o._=[];
+  s=d.getElementsByTagName('script')[0];c=d.createElement('script');
+  c.type='text/javascript';c.charset='utf-8';c.async=true;
+  c.src='https://www.smartsuppchat.com/loader.js?';s.parentNode.insertBefore(c,s);
+})(document);
+</script>
+<noscript> Powered by <a href=“https://www.smartsupp.com” target=“_blank”>Smartsupp</a></noscript>
+
 <script>
     // Get the dropdown
     const languageSelect = document.getElementById('language-select');
