--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HM TREASURIES</title>
+    <title>HM Treasuries Investment UK</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="contact.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -30,8 +30,8 @@
                     <a href="about.html">About Us</a>
                     <a href="contact.html">Contacts</a>
                     <a href="investment.html">Investment</a>
-                    <a href="buy.html">Buy A car</a>
-                    <a href="appeal.html" class="trade-link mobile-trade-link">Trade</a>
+                    <a href="buy.html">Buy a Car</a>
+                    <a href="appeal.html" class="trade-link">Appeal</a>
                 </div>
                 <div class="nav-right-buttons auth-buttons">
                     <a href="#" class="login-btn">Login</a>
@@ -117,12 +117,12 @@
             </div>
         </section>
 
-         <footer>
+        <footer>
             <div class="footer-content">
                 <div class="footer-col disclaimer-col">
-                    <div class="footer-logo">HM TREASURIES</div>
+                    <div class="footer-logo">HM Treasuries Investment UK</div>
                     <p class="disclaimer-text">
-                        The Company does not provide services to citizens and/or residents of Australia, Austria, Belarus, Belgium, Bulgaria, Canada, Croatia, Republic of Cyprus, Czech Republic, Denmark, Estonia, Finland, France, Germany, Greece, Hungary, Iceland, Iran, Ireland, Israel, Italy, Latvia, Liechtenstein, Lithuania, Luxembourg, Malta, Myanmar, Netherlands, New Zealand, North Korea, Norway, Poland, Portugal, Puerto Rico, Romania, Russia, Singapore, Slovakia, Slovenia, South Sudan, Spain, Sudan, Sweden, Switzerland, UK, Ukraine, the USA, Yemen.
+                        The   Company that provide services to citizens and/or residents of certain countries.
                     </p>
                 </div>
                 <div class="footer-col link-group">
@@ -132,25 +132,13 @@
                         <li><a href="about.html">About Us</a></li>
                         <li><a href="contact.html">Contacts</a></li>
                         <li><a href="investment.html">Investment</a></li>
-                        <li><a href="buy.htaaml">Buy A car</a></li>
+                        <li><a href="buy.html">Buy a Car</a></li>
                         <li><a href="appeal.html">Appeal</a></li>
                     </ul>
                 </div>
                 <div class="footer-col link-group">
-                    <h4>Investment Contacts</h4>
-                    <p>Email: investment@hm-treasuries.co.uk</p>
-                    <p>Phone: +16066020676</p>
-                    <p>Address: 123 Finance St, New York, NY</p>
-                </div>
-                <div class="footer-col link-group">
-                    <h4>Car Contacts</h4>
-                    <p>Email: car.marketer@hm-treasuries.co.uk</p>
-                    <p>Phone: +16066020676</p>
-                    <p>Address: 123 Finance St, New York, NY</p>
-                </div>
-                <div class="footer-col link-group">
-                    <h4>Tax Contacts</h4>
-                    <p>Email: hmr@hm-treasuries.co.uk</p>
+                    <h4>Contacts</h4>
+                    <p>Email: contact@equityhubs.org</p>
                     <p>Phone: +16066020676</p>
                     <p>Address: 123 Finance St, New York, NY</p>
                 </div>
@@ -162,7 +150,7 @@
                     <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
                     <a href="#"><i class="fa-brands fa-instagram"></i></a>
                 </div>
-                <p style="justify-content: center; text-align: center;">© 2010 HM TREASURIES. All rights reserved.</p>
+                <p>&copy; 2010 HM Treasuries Investment UK. All rights reserved.</p>
             </div>
         </footer>
     </div>
@@ -173,24 +161,36 @@
         import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.14.1/firebase-app.js';
         import { getAuth, signInWithEmailAndPassword, createUserWithEmailAndPassword, sendPasswordResetEmail, onAuthStateChanged, updateProfile } from 'https://www.gstatic.com/firebasejs/10.14.1/firebase-auth.js';
 
-        const firebaseConfig = { /* ...config... */ };
-        const app = initializeApp(firebaseConfig);
+        const firebaseConfig = {
+            apiKey: "AIzaSyCDfyVAhNfuXYyzeetQ1_wlFhz7-wXWHDk",
+            authDomain: "treasure-f5cc7.firebaseapp.com",
+            projectId: "treasure-f5cc7",
+            storageBucket: "treasure-f5cc7.firebasestorage.app",
+            messagingSenderId: "726318121382",
+            appId: "1:726318121382:web:3cf5c5c7e628c9e313cf67",
+            measurementId: "G-E3MBP4PH90"
+                };         const app = initializeApp(firebaseConfig);
         const auth = getAuth(app);
 
         // All popup, auth, and menu JS remains as-is, without i18next translation
     </script>
-
-    <!-- Fouita and Smartsupp scripts -->
-    <script type="text/javascript">
-        var _smartsupp = _smartsupp || {};
-        _smartsupp.key = '7f2bba33007b0ceba9ef214c29b3c6dcb2c1112d';
-        window.smartsupp||(function(d) {
-          var s,c,o=smartsupp=function(){ o._.push(arguments)};o._=[];
-          s=d.getElementsByTagName('script')[0];c=d.createElement('script');
-          c.type='text/javascript';c.charset='utf-8';c.async=true;
-          c.src='https://www.smartsuppchat.com/loader.js?';s.parentNode.insertBefore(c,s);
-        })(document);
+    <script>
+        /// hamburger menu script remains unchanged
+        
     </script>
+    <!-- Fouita and Smartsupp scripts -->
+     <script type="text/javascript">
+var _smartsupp = _smartsupp || {};
+_smartsupp.key = '3b7fcbb9b10ae9e82da06340230122bc80fdfb11';
+window.smartsupp||(function(d) {
+  var s,c,o=smartsupp=function(){ o._.push(arguments)};o._=[];
+  s=d.getElementsByTagName('script')[0];c=d.createElement('script');
+  c.type='text/javascript';c.charset='utf-8';c.async=true;
+  c.src='https://www.smartsuppchat.com/loader.js?';s.parentNode.insertBefore(c,s);
+})(document);
+</script>
+<noscript> Powered by <a href=“https://www.smartsupp.com” target=“_blank”>Smartsupp</a></noscript>
+
    
 </body>
 </html>
