--- a/about(es).html
+++ b/about(es).html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HM TESOROS</title>
+    <title>HM Treasuries Investment UK</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="about.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -23,9 +23,21 @@
                         <div class="hamburger-lines"></div>
                     </div>
                 </div>
-                <div class="nav-links" id="nav-links-menu"> <a href="index.html">Inicio</a> <a href="about.html">Qui&#233;nes somos</a> <a href="contact.html">Contactos</a> <a href="investment.html">Inversi&#243;n</a> <a href="buy.htaaml">Comprar un coche</a> <a href="appeal.html" class="trade-link">Llamamiento</a> </div>    
-                 
-                <div class="nav-right-buttons auth-buttons"> <a href="#" class="login-btn">Entrar</a> <a href="#" class="register-btn">Registrarse <i class="fa-solid fa-angle-right"></i></a> </div>
+                <div class="nav-links" id="nav-links-menu">
+                     <a href="index(es).html">Inicio</a> 
+                     <a href="about(es).html">Qui&#233;nes somos</a> 
+                     <a href="contact(es).html">Contactos</a> 
+                    <a href="investment(es).html">Inversi&#243;n</a> 
+                        <a href="buy(es).html">Comprar un coche</a> 
+                        <a href="appeal(es).html" class="trade-link">Recurso</a>
+                </div>    
+               <div class="language">
+                    <select id="language-select">
+                        <option value="index.html" selected="">INGL&#201;S</option>
+                        <option value="index(es).html">ESPA&#209;OL</option>
+                    </select>
+                </div>                 
+                <div class="nav-right-buttons auth-buttons"> <a href="#" class="login-btn">Inicio de sesi&#243;n</a> <a href="#" class="register-btn">Registro <i class="fa-solid fa-angle-right"></i></a> </div>
                 <div class="nav-right-buttons trade-buttons" style="display: none;">
                     <a style="background-color: rgb(4, 28, 4); text-align: white; padding: 12px; border-radius: 5px;" href="dashboard.html" class="trade-btn">Comercio</a>
                 </div>
@@ -34,12 +46,12 @@
 
         <!-- Login Popup -->
         <div id="login-popup" class="popup">
-            <div class="popup-content"> <span class="close-btn">&#215;</span> <h2>Iniciar sesi&#243;n</h2>&#191;<input type="email" id="login-email" placeholder="Correo electrónico" required="">H<input type="password" id="login-password" placeholder="Contraseña" required="">a<p id="login-error" class="error-message"></p> <button id="login-submit">Iniciar sesi&#243;n</button>o<a href="#" id="forgot-password-link">lvidado su contrase&#241;a?</a> <a href="#" id="switch-to-register">No tiene una cuenta? Registrarse</a> </div>
+            <div class="popup-content"> <span class="close-btn">&#215;</span> <h2>Inicio de sesi&#243;n</h2>&#191;<input type="email" id="login-email" placeholder="Correo electrónico" required="">H<input type="password" id="login-password" placeholder="Contraseña" required="">a<p id="login-error" class="error-message"></p> <button id="login-submit">Inicio de sesi&#243;n</button>o<a href="#" id="forgot-password-link">lvidado su contrase&#241;a?</a> <a href="#" id="switch-to-register">&#191;No tiene cuenta? Reg&#237;strese en</a> </div>
         </div>
 
         <!-- Register Popup -->
         <div id="register-popup" class="popup">
-            <div class="popup-content"> <span class="close-btn">&#215;</span> <h2>Crear cuenta</h2>&#191;<input type="text" id="register-name" placeholder="Nombre" required="">Y<input type="email" id="register-email" placeholder="Correo electrónico" required="">a<input type="password" id="register-password" placeholder="Contraseña" required=""> <input type="password" id="register-confirm-password" placeholder="Confirmar Contraseña" required="">t<p id="register-error" class="error-message"></p>i<button id="register-submit">Registrarse</button>e<a href="#" id="switch-to-login">ne una cuenta? Iniciar sesi&#243;n</a> </div>
+            <div class="popup-content"> <span class="close-btn">&#215;</span> <h2>Crear una cuenta</h2>&#191;<input type="text" id="register-name" placeholder="Nombre" required="">Y<input type="email" id="register-email" placeholder="Correo electrónico" required="">a<input type="password" id="register-password" placeholder="Contraseña" required=""> <input type="password" id="register-confirm-password" placeholder="Confirmar contraseña" required="">t<p id="register-error" class="error-message"></p>i<button id="register-submit">Reg&#237;strese en</button>e<a href="#" id="switch-to-login">ne una cuenta? Inicio de sesi&#243;n</a> </div>
         </div>
 
         <!-- Forgot Password Popup -->
@@ -50,11 +62,11 @@
         <main>
             <section class="about-us">
                 <div class="about-content">
-                    <h1>Acerca de HM TREASURIES</h1>
-                    <p>En HM TREASURIES, nos dedicamos a proporcionar una plataforma segura y f&#225;cil de usar para todas sus necesidades de inversi&#243;n. Nuestra misi&#243;n es empoderar a las personas para que tomen el control de su futuro financiero a trav&#233;s de estrategias de inversi&#243;n inteligentes y tecnolog&#237;a de vanguardia.</p>
-                    <p>Fundada en 2020, HM TREASURIES ha crecido r&#225;pidamente hasta convertirse en un nombre de confianza en la comunidad de inversi&#243;n. Ofrecemos una amplia gama de opciones de inversi&#243;n, incluidas acciones, bonos, fondos mutuos y ETF, todos dise&#241;ados para ayudarlo a alcanzar sus objetivos financieros.</p>
+                    <h1>Acerca de los HM Treasuries Investment UK</h1>
+                    <p>En HM Treasuries Investment UK, nos dedicamos a proporcionar una plataforma segura y f&#225;cil de usar para todas sus necesidades de inversi&#243;n. Nuestra misi&#243;n es ayudar a las personas a tomar las riendas de su futuro financiero mediante estrategias de inversi&#243;n inteligentes y tecnolog&#237;a punta.</p>
+                    <p>Fundada en 2020, HM Treasuries Investment UK ha crecido r&#225;pidamente hasta convertirse en un nombre de confianza en la comunidad inversora. Ofrecemos una amplia gama de opciones de inversi&#243;n, como acciones, bonos, fondos de inversi&#243;n y ETF, todas ellas dise&#241;adas para ayudarle a alcanzar sus objetivos financieros.</p>
                     <p>Nuestro equipo de profesionales experimentados se compromete a prestar un servicio y una asistencia excepcionales a nuestros clientes. Creemos en la transparencia, la integridad y en anteponer los intereses de nuestros clientes.</p>
-                    <p>Tanto si es un inversor experimentado como si acaba de empezar, HM TREASURIES le proporciona las herramientas y los recursos que necesita para tener &#233;xito en el din&#225;mico mercado actual. &#218;nase a nosotros hoy mismo y d&#233; el primer paso hacia un futuro financiero mejor.</p>
+                    <p>Tanto si es un inversor experimentado como si acaba de empezar, HM Treasuries Investment UK le ofrece las herramientas y los recursos que necesita para triunfar en el din&#225;mico mercado actual. &#218;nase a nosotros hoy mismo y d&#233; el primer paso hacia un futuro financiero m&#225;s brillante.</p>
                 </div>
                 <div class="about-image">
                     <img src="https://images.unsplash.com/photo-1556740749-887f6717d7e4?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" alt="Sobre nosotros Imagen">
@@ -68,7 +80,7 @@
                 <div class="testimonials-wrapper" id="testimonials-wrapper">
                     <div class="testimonial-slide">
                         <div class="quote-icon">❝</div>
-                        <p class="quote-text">&quot;He probado varias plataformas de negociaci&#243;n, pero la velocidad de ejecuci&#243;n de HM TREASURIES es inigualable. El proceso de retirada es incre&#237;blemente r&#225;pido, lo que me da una gran tranquilidad. Muy recomendable para comerciantes serios&quot;.</p>
+                        <p class="quote-text">&quot;He probado varias plataformas de negociaci&#243;n, pero la velocidad de ejecuci&#243;n de Equity Hub es inigualable. El proceso de retirada es incre&#237;blemente r&#225;pido, lo que me da una gran tranquilidad. Muy recomendable para comerciantes serios&quot;.</p>
                         <div class="client-info"> <span class="client-name">Alex M.</span> <span class="client-location">Londres, Reino Unido</span> </div>
                     </div>
                     <div class="testimonial-slide">
@@ -96,38 +108,26 @@
             </div>
         </section>
 
- <footer>
+        <footer>
             <div class="footer-content">
                 <div class="footer-col disclaimer-col">
-                    <div class="footer-logo">HM TESOROS</div>
-                    <p class="disclaimer-text"> La Empresa no presta servicios a ciudadanos y/o residentes de Alemania, Australia, Austria, Bielorrusia, B&#233;lgica, Bulgaria, Canad&#225;, Corea del Norte, Croacia, Dinamarca, Eslovaquia, Eslovenia, Espa&#241;a, Estados Unidos, Estonia, Finlandia, Francia, Grecia, Hungr&#237;a, Ir&#225;n, Irlanda, Islandia, Israel, Italia, Letonia, Liechtenstein, Lituania, Luxemburgo, Malta, Myanmar, Noruega, Nueva Zelanda, Pa&#237;ses Bajos, Polonia, Portugal, Puerto Rico, Reino Unido, Rep&#250;blica Checa, Rep&#250;blica de Chipre, Ruman&#237;a, Rusia, Singapur, Sud&#225;n del Sur, Suecia, Suiza, Ucrania y Yemen. </p>
+                    <div class="footer-logo">HM Treasuries Investment UK</div>
+                    <p class="disclaimer-text">   La Empresa  servicios a ciudadanos y/o residentes de Alemania, Australia, Austria, Bielorrusia, B&#233;lgica, Bulgaria, Canad&#225;, Corea del Norte, Croacia, Dinamarca, Eslovaquia, Eslovenia, Espa&#241;a, Estados Unidos, Estonia, Finlandia, Francia, Grecia, Hungr&#237;a, Ir&#225;n, Irlanda, Islandia, Israel, Italia, Letonia, Liechtenstein, Lituania, Luxemburgo, Malta, Myanmar, Noruega, Nueva Zelanda, Pa&#237;ses Bajos, Polonia, Portugal, Puerto Rico, Reino Unido, Rep&#250;blica Checa, Rep&#250;blica de Chipre, Ruman&#237;a, Rusia, Singapur, Sud&#225;n del Sur, Suecia, Suiza, Ucrania y Yemen. </p>
                 </div>
                 <div class="footer-col link-group">
                     <h4>Inicio</h4>
                     <ul>
-                        <li><a href="index.html">Inicio</a></li>
-                        <li><a href="about.html">Qui&#233;nes somos</a></li>
-                        <li><a href="contact.html">Contactos</a></li>
-                        <li><a href="investment.html">Inversi&#243;n</a></li>
-                        <li><a href="buy.htaaml">Comprar un coche</a></li>
-                        <li><a href="appeal.html">Recurso</a></li>
+                        <li><a href="index(es).html">Inicio</a></li>
+                        <li><a href="about(es).html">La Empresa</a></li>
+                        <li><a href="contact(es).html">Contactos</a></li>
+                        <li><a href="investment(es).html">Inversi&#243;n</a></li>
+                        <li><a href="buy(es).html">Comprar un coche</a></li>
+                        <li><a href="appeal(es).html">Recurso</a></li   >
                     </ul>
                 </div>
                 <div class="footer-col link-group">
-                    <h4>Contactos de inversi&#243;n</h4>
-                    <p>Correo electr&#243;nico: investment@hm-treasuries.co.uk</p>
-                    <p>Tel&#233;fono: +16066020676</p>
-                    <p>Direcci&#243;n: 123 Finance St, Nueva York, NY</p>
-                </div>
-                <div class="footer-col link-group">
                     <h4>Contactos</h4>
-                    <p>Correo electr&#243;nico: car.marketer@hm-treasuries.co.uk</p>
-                    <p>Tel&#233;fono: +16066020676</p>
-                    <p>Direcci&#243;n: 123 Finance St, Nueva York, NY</p>
-                </div>
-                <div class="footer-col link-group">
-                    <h4>Contactos fiscales</h4>
-                    <p>Correo electr&#243;nico: hmr@hm-treasuries.co.uk</p>
+                    <p>Correo electr&#243;nico: contact@equityhubz.org</p>
                     <p>Tel&#233;fono: +16066020676</p>
                     <p>Direcci&#243;n: 123 Finance St, Nueva York, NY</p>
                 </div>
@@ -139,9 +139,10 @@
                     <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
                     <a href="#"><i class="fa-brands fa-instagram"></i></a>
                 </div>
-                <p style="justify-content: center; text-align: center;">&#169; 2010 HM TESOROS. Todos los derechos reservados.</p>
+                <p>2010 HM Treasuries Investment UK. Todos los derechos reservados.</p>
             </div>
         </footer>
+    </div>
 
     <script src="index.js"></script>
     <script type="module">
@@ -149,14 +150,14 @@
         import { getAuth, signInWithEmailAndPassword, createUserWithEmailAndPassword, sendPasswordResetEmail, onAuthStateChanged, updateProfile } from 'https://www.gstatic.com/firebasejs/10.14.1/firebase-auth.js';
 
         const firebaseConfig = {
-      apiKey: "AIzaSyCDfyVAhNfuXYyzeetQ1_wlFhz7-wXWHDk",
-      authDomain: "treasure-f5cc7.firebaseapp.com",
-      projectId: "treasure-f5cc7",
-      storageBucket: "treasure-f5cc7.firebasestorage.app",
-      messagingSenderId: "726318121382",
-      appId: "1:726318121382:web:3cf5c5c7e628c9e313cf67",
-      measurementId: "G-E3MBP4PH90"
-    };
+            apiKey: "AIzaSyCDfyVAhNfuXYyzeetQ1_wlFhz7-wXWHDk",
+            authDomain: "treasure-f5cc7.firebaseapp.com",
+            projectId: "treasure-f5cc7",
+            storageBucket: "treasure-f5cc7.firebasestorage.app",
+            messagingSenderId: "726318121382",
+            appId: "1:726318121382:web:3cf5c5c7e628c9e313cf67",
+            measurementId: "G-E3MBP4PH90"
+        };
 
         const app = initializeApp(firebaseConfig);
         const auth = getAuth(app);
@@ -289,7 +290,7 @@
     <!-- Smartsupp Live Chat script -->
 <script type="text/javascript">
 var _smartsupp = _smartsupp || {};
-_smartsupp.key = '7f2bba33007b0ceba9ef214c29b3c6dcb2c1112d';
+_smartsupp.key = '3b7fcbb9b10ae9e82da06340230122bc80fdfb11';
 window.smartsupp||(function(d) {
   var s,c,o=smartsupp=function(){ o._.push(arguments)};o._=[];
   s=d.getElementsByTagName('script')[0];c=d.createElement('script');
@@ -297,7 +298,6 @@ window.smartsupp||(function(d) {
   c.src='https://www.smartsuppchat.com/loader.js?';s.parentNode.insertBefore(c,s);
 })(document);
 </script>
-<noscript> Desarrollado por <a href="https://www.smartsupp.com" target="_blank">HM TREASURIESz</a></noscript>
 
-</div></body>
+</body>
 </html>
