--- a/admin_edit.html
+++ b/admin_edit.html
@@ -27,15 +27,15 @@
 <div id="list"></div>
 
 <script>
-const firebaseConfig = {
-  apiKey: "AIzaSyCDfyVAhNfuXYyzeetQ1_wlFhz7-wXWHDk",
-  authDomain: "treasure-f5cc7.firebaseapp.com",
-  projectId: "treasure-f5cc7",
-  storageBucket: "treasure-f5cc7.appspot.com",
-  messagingSenderId: "726318121382",
-  appId: "1:726318121382:web:3cf5c5c7e628c9e313cf67"
-};
-
+const app = initializeApp({
+        apiKey: "AIzaSyCDfyVAhNfuXYyzeetQ1_wlFhz7-wXWHDk",
+            authDomain: "treasure-f5cc7.firebaseapp.com",
+            projectId: "treasure-f5cc7",
+            storageBucket: "treasure-f5cc7.firebasestorage.app",
+            messagingSenderId: "726318121382",
+            appId: "1:726318121382:web:3cf5c5c7e628c9e313cf67",
+            measurementId: "G-E3MBP4PH90"
+            });
 firebase.initializeApp(firebaseConfig);
 const db = firebase.firestore();
 
